[package]
name = "secure-protocol-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "secure_protocol"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
ffi = ["dep:cbindgen"]
python = []

[dependencies]
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
blake3.workspace = true
rand_core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true
bytes.workspace = true
parking_lot.workspace = true
libc.workspace = true

arrayvec = "0.7"
once_cell = "1.18"
num-derive = "0.4"
num-traits = "0.2"
sled = "0.34"

[build-dependencies]
cbindgen = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
tempfile = "3.8"
hex = "0.4"
