[package]
name = "secure-protocol-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "_secure_protocol"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
secure-protocol-core = { path = "../../core", package = "secure-protocol-core" }
